# capsule-anchor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python.yml
deploy/: DEPLOY.md  KEY-MANAGEMENT.md  cloudbuild.yaml
